Donar med login

--- a/rubylab/laboration/app/views/projects/show.html.erb
+++ b/rubylab/laboration/app/views/projects/show.html.erb
@@ -7,3 +7,5 @@
 <%= @project.end_date %> <br/>
 
 <%= link_to "Lägg till en ticket", @project.id.to_s + new_ticket_path %>
+
+<%= link_to "Tillbaka", projects_path %>
