--- a/rubylab/laboration/app/views/projects/show.html.erb
+++ b/rubylab/laboration/app/views/projects/show.html.erb
@@ -6,6 +6,19 @@
 <%= @project.start_date %> <br/>
 <%= @project.end_date %> <br/>
 
-<%= link_to "Lägg till en ticket", @project.id.to_s + new_ticket_path %>
+<h4> Tickets </h4>
+
+<p>
+<% @tickets.each do |ticket| %>
+			<p>
+				<%= link_to "#{ticket.name}", project_ticket_path(@project, ticket) %>
+			</p>
+<% end %>
+</p>
+
+<%= link_to "Lägg till en ticket", @project.id.to_s + new_ticket_path %> <br/>
+<%= link_to "Redigera Projekt", edit_project_path %> <br/>
+
+<%= link_to 'X', project_path(@project), :confirm => 'Eru säker?', :method => :delete, :class => "btn btn-danger" %> <br/>
 
 <%= link_to "Tillbaka", projects_path %>
