--- a/rubylab/laboration/app/views/projects/new.html.erb
+++ b/rubylab/laboration/app/views/projects/new.html.erb
@@ -9,8 +9,19 @@
 	<%= p.date_select :start_date %>
 	<%= p.label :end_date %>
 	<%= p.date_select :end_date %>
+	<p>
+		<% @users.each do |u| %>
+          <p>
+            <%= check_box_tag 'user_ids[]', u.id, u.projects.include?(@project) %>
+            <%= "#{u.first_name} #{u.last_name}" %>
+          </p>
+        <% end %>
+	</p>
 	<%= p.submit "Skapa projekt" %>
 
 <% end %>
+
+
+
 
 <%= link_to "Tillbaka", projects_path %>
