--- a/rubylab/laboration/app/views/layouts/application.html.erb
+++ b/rubylab/laboration/app/views/layouts/application.html.erb
@@ -20,10 +20,10 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
-              <li><%= link_to "Alla projekt", projects_path %></li>
-              <li><%= link_to "Skapa projekt", new_project_path %></li>
+              <li><%= link_to "All projects", projects_path %></li>
+              <li><%= link_to "Create project", new_project_path %></li>
 
-              <li> <%= link_to "Logga out", login_path(1), :method => "delete" %>
+              <li> <%= link_to "Log out", login_path(1), :method => "delete" %>
 
             </ul>
           </div><!--/.nav-collapse -->
