--- a/pythonlab/project_manager/projectmanager/templates/shared/base.html
+++ b/pythonlab/project_manager/projectmanager/templates/shared/base.html
@@ -29,9 +29,11 @@
           <a class="brand" href="{% url 'project_list' %}">Project Manager</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
+              {% if user.is_authenticated %}
               <li><a href="{% url 'project_list' %}">All projects</a></li>
               <li><a href="{% url 'project_add' %}">Add Project</a></li>
-              <li><a href="#">Log out</a></li>
+              <li><a href="{% url 'logout' %}">Log out</a></li>
+              {% endif %}
             </ul>
           </div><!--/.nav-collapse -->
         </div>
